# Proiect-Licenta-Stock-Market

./: .gitignore  .gitmodules  CMakeLists.txt  YahooFinanceDocumentation  boostBuilder.sh  build.sh  configure.sh  deleteTest.sh  run.sh  runTests.sh
Server-c++Linux/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  StockDataService.cpp  main  main.cpp
clientHTTP/: Buy.Designer.cs  Buy.cs  Compare.Designer.cs  Compare.cs  Form1.Designer.cs  Form1.cs  Graph.Designer.cs  Graph.cs  HttpClient.cs  Login.Designer.cs  Login.cs  Program.cs  clientHTTP.csproj  clientHTTP.sln
clientHTTP/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
clientHTTP/StocksStructures/: BidAskEntry.cs  Stock.cs
clientHTTP/Structures/: Credentials.cs
clientHTTP/Utilitare/: Settings.cs  StockConvertor.cs  UserData.cs  Validator.cs
converter/: CMakeLists.txt  TimeConverter.cpp
data/: CMakeLists.txt  Date.cpp  StockData.cpp
database_licenta/: account.txt  accounts.sql  askPrice.sql  askPrice.txt  buy.sql  buy.txt  connect.txt  owned.sql  owned.txt  sql_tutorial.txt  users.sql  users.txt
formatter/: CMakeLists.txt  DataFormater.h
request/: RequestStockData.cpp
source/: CMakeLists.txt  main  main.cpp  restbedTest.cpp
source/Server-c++Linux/: CMakeLists.txt  LoginData.h  Serialize.cpp  Serialize.h  Service.cpp  Service.h  StockDataBuissnes.cpp  StockDataBuissnes.h  StockDataService.cpp  StockDataService.h
source/Server-c++Linux/model/: Credentials.h
source/SqlExecutor/: CMakeLists.txt  SqlExecutor.cpp  SqlExecutor.h  SqlGenerator.cpp  SqlGenerator.h
source/converter/: CMakeLists.txt  TimeConverter.cpp  TimeConverter.h
source/data/: CMakeLists.txt  Date.cpp  Date.h  StockData.cpp  StockData.h
source/formatter/: CMakeLists.txt  DataFormater.cpp  DataFormater.h  StockData.cpp  StockData.h  parsing.cpp  parsing.h
source/price_api/: CMakeLists.txt  build.sh  configure.sh  main.cpp  run.sh
source/price_api/source/: PriceService.cpp  PriceService.h
source/request/: CMakeLists.txt  RequestStockData.cpp  RequestStockData.h  RequestToPriceApi.cpp  RequestToPriceApi.h
source/service/: CMakeLists.txt  Service.h
source/tests/: CMakeLists.txt  SqlExecutorTest.cpp
source/utils/: CMakeLists.txt  PriceGenerator.cpp  PriceGenerator.h  Serialize.cpp  Serialize.h  Utils.cpp  Utils.h
source/utils/model/: BidAskPrice.h
